# Project-Eady

./: .gitignore  README.md  pyproject.toml
docs/: installation.md
