[tool.poetry]
name = "eady"
version = "0.1.0"
description = ""
authors = ["Seth Docherty <sddocherty@gmail.com>"]
readme = "README.md"
repository = "https://github.com/SethDocherty/Project-Eady"
packages = [{include = "eady"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
requests = "^2.28.2"
Flask = "^2.2.2"
notebook = "^6.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
pylint = "^2.15.10"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
